--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,38 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[OnlineSubsystemEOS]
+bEnabled=true
+
+[OnlineSubsystem]
+DefaultPlatformService=EOS
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[/Script/OnlineSubsystemEOS.NetDriverEOS]
+bIsUsingP2PSockets=true
+
+[/Script/OnlineSubsystemEOS.EOSSettings]
+CacheDir=CacheDir
+DefaultArtifactName=EOS Product
+TickBudgetInMilliseconds=0
+bEnableOverlay=True
+bEnableSocialOverlay=True
+bEnableEditorOverlay=False
+bShouldEnforceBeingLaunchedByEGS=False
+TitleStorageReadChunkLength=0
++Artifacts=(ArtifactName="EOS Product",ClientId="xyza7891eEoeLECAsik1Mbp8zKWDIW5o",ClientSecret="oBMPx1/of05Wjw0//UZ14aZk9Q5UtFPUbAsFBZZXv00",ProductId="f443d346fbf44925ab8c4966f221411d",SandboxId="a2469d4cfb3444d1b250ade4154649c1",DeploymentId="3346ac110136488ca40dfb0e27169457",ClientEncryptionKey="")
+-AuthScopeFlags=BasicProfile
+-AuthScopeFlags=FriendsList
+-AuthScopeFlags=Presence
++AuthScopeFlags=BasicProfile
++AuthScopeFlags=FriendsList
++AuthScopeFlags=Presence
+bUseEAS=True
+bUseEOSConnect=True
+bMirrorStatsToEOS=True
+bMirrorAchievementsToEOS=True
+bUseEOSSessions=True
+bMirrorPresenceToEAS=True
+
